--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -7,15 +7,15 @@
     <string name="screen_pick_exercise">Exercice de choix</string>
     <string name="yes">Oui</string>
     <string name="btn_cancel">Annuler</string>
-    <string name="dialog_delete_title">Voulez-vous supprimer les %1$s \?</string>
+    <string name="dialog_title_delete">Voulez-vous supprimer les %1$s \?</string>
     <string name="btn_add_set">Ajouter une série</string>
-    <string name="col_weight">Poids</string>
-    <string name="col_time">Heure</string>
+    <string name="column_weight">Poids</string>
+    <string name="column_time">Heure</string>
     <string name="checkbox_log_time">Heure du journal</string>
     <string name="checkbox_log_weight">Poids record</string>
     <string name="checkbox_log_reps">Répétitions du journal</string>
-    <string name="col_reps">Répétitions</string>
-    <string name="col_distance">Distante</string>
+    <string name="column_reps">Répétitions</string>
+    <string name="column_distance">Distante</string>
     <string name="screen_routine_list">Règles de routine</string>
     <string name="unnamed_routine">Non nommé</string>
     <string name="checkbox_log_distance">Distance du journal</string>
