--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -5,17 +5,17 @@
     <string name="screen_exercise_list">Esercizi</string>
     <string name="screen_routine_list">Routine</string>
     <string name="screen_pick_exercise">Scegliere l\'esercizio</string>
-    <string name="col_distance">Distanza</string>
-    <string name="col_time">Tempo</string>
-    <string name="col_weight">Peso</string>
+    <string name="column_distance">Distanza</string>
+    <string name="column_time">Tempo</string>
+    <string name="column_weight">Peso</string>
     <string name="btn_add_set">Aggiungi set</string>
-    <string name="dialog_delete_title">Vuoi cancellare %1$s \?</string>
+    <string name="dialog_title_delete">Vuoi cancellare %1$s \?</string>
     <string name="btn_cancel">Cancella</string>
     <string name="yes">Sì</string>
     <string name="checkbox_log_distance">Distanza log</string>
     <string name="checkbox_log_time">Tempo di log</string>
     <string name="checkbox_log_weight">Peso record</string>
-    <string name="col_reps">Ripete</string>
+    <string name="column_reps">Ripete</string>
     <string name="screen_settings">Impostazioni</string>
     <string name="alert_no_log_value_selected">Seleziona almeno un valore.</string>
     <string name="checkbox_log_reps">Registrare Ripete</string>
