--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -2,15 +2,15 @@
 <resources>
     <string name="yes">Ja</string>
     <string name="btn_cancel">Abbrechen</string>
-    <string name="col_time">Dauer</string>
-    <string name="col_weight">Gewicht</string>
-    <string name="col_distance">Strecke</string>
+    <string name="column_time">Dauer</string>
+    <string name="column_weight">Gewicht</string>
+    <string name="column_distance">Strecke</string>
     <string name="alert_no_log_value_selected">Bitte wähle mindestens einen Wert aus.</string>
     <string name="screen_settings">Einstellungen</string>
     <string name="unnamed_routine">Unbenannt</string>
-    <string name="dialog_delete_title">Möchtest du %1$s löschen\?</string>
+    <string name="dialog_title_delete">Möchtest du %1$s löschen\?</string>
     <string name="btn_add_set">Satz hinzufügen</string>
-    <string name="col_reps">Wiederholungen</string>
+    <string name="column_reps">Wiederholungen</string>
     <string name="checkbox_log_weight">Gewicht protokollieren</string>
     <string name="checkbox_log_reps">Wiederholungen protokollieren</string>
     <string name="checkbox_log_distance">Distanz protokollieren</string>
