--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -4,9 +4,9 @@
     <string name="yes">Bai</string>
     <string name="btn_cancel">Utzi</string>
     <string name="btn_add_set">Gehitu Ezarri</string>
-    <string name="col_weight">Pisua</string>
-    <string name="col_time">Denbora</string>
-    <string name="col_distance">Distantzia</string>
+    <string name="column_weight">Pisua</string>
+    <string name="column_time">Denbora</string>
+    <string name="column_distance">Distantzia</string>
     <string name="screen_pick_exercise">Aukeratu Ariketa</string>
     <string name="alert_no_log_value_selected">Mesedez, hautatu, gutxienez balio bat.</string>
     <string name="screen_routine_list">Errutinak</string>
@@ -17,6 +17,6 @@
     <string name="checkbox_log_weight">Pisu saioa</string>
     <string name="checkbox_log_time">Denbora saioa</string>
     <string name="checkbox_log_distance">Distantzia saioa</string>
-    <string name="col_reps">Errepikapenak</string>
-    <string name="dialog_delete_title">Ez ezabatu nahi duzula %1$s\?</string>
+    <string name="column_reps">Errepikapenak</string>
+    <string name="dialog_title_delete">Ez ezabatu nahi duzula %1$s\?</string>
 </resources>
