--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="yes">Tak</string>
-    <string name="col_weight">Waga</string>
-    <string name="col_reps">Powtarza</string>
+    <string name="column_weight">Waga</string>
+    <string name="column_reps">Powtarza</string>
     <string name="checkbox_log_reps">Powtórzenia dziennika</string>
     <string name="screen_exercise_list">Ćwiczenia</string>
     <string name="screen_routine_list">Procedury</string>
@@ -13,10 +13,10 @@
     <string name="screen_workout_history">Historia</string>
     <string name="alert_no_log_value_selected">Proszę wybrać co najmniej jedną wartość.</string>
     <string name="screen_pick_exercise">Wybierz Ćwiczenie</string>
-    <string name="col_distance">Odległość</string>
-    <string name="col_time">Czas</string>
+    <string name="column_distance">Odległość</string>
+    <string name="column_time">Czas</string>
     <string name="btn_add_set">Dodaj zestaw</string>
     <string name="btn_cancel">Anuluj</string>
-    <string name="dialog_delete_title">Czy chcesz usunąć %1$s \?</string>
+    <string name="dialog_title_delete">Czy chcesz usunąć %1$s \?</string>
     <string name="checkbox_log_time">Czas logowania</string>
 </resources>
