--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -8,15 +8,15 @@
     <string name="screen_routine_list">Rutin</string>
     <string name="alert_no_log_value_selected">Välj minst ett värde.</string>
     <string name="screen_pick_exercise">Plocka Motion</string>
-    <string name="col_distance">Avstånd</string>
-    <string name="col_time">Tid</string>
-    <string name="col_weight">Vikt</string>
+    <string name="column_distance">Avstånd</string>
+    <string name="column_time">Tid</string>
+    <string name="column_weight">Vikt</string>
     <string name="btn_add_set">Lägg Set</string>
-    <string name="dialog_delete_title">Vill du ta bort %1$s \?</string>
+    <string name="dialog_title_delete">Vill du ta bort %1$s \?</string>
     <string name="checkbox_log_distance">Avstånd log</string>
     <string name="checkbox_log_time">Tidslogg</string>
     <string name="checkbox_log_weight">Vikt log</string>
     <string name="checkbox_log_reps">Repetitioner logga in</string>
-    <string name="col_reps">Repetitioner</string>
+    <string name="column_reps">Repetitioner</string>
     <string name="btn_cancel">Avbryta</string>
 </resources>
