--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,14 +17,14 @@
   -->
 <resources>
     <string name="app_name" translatable="false">GymRoutines</string>
-    <string name="unnamed_routine">Unnamed</string>
+    <string name="app_license" translatable="false">GymRoutines\nCopyright © 2020  Noah Jutz\n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program.  If not, see https://www.gnu.org/licenses/.</string>
     <string name="btn_cancel">Cancel</string>
-    <string name="dialog_delete_title">Do you want to delete %1$s\?</string>
+    <string name="unnamed_routine">Unnamed</string>
     <string name="btn_add_set">Add Set</string>
-    <string name="col_reps">Reps</string>
-    <string name="col_weight">Weight</string>
-    <string name="col_time">Time</string>
-    <string name="col_distance">Distance</string>
+    <string name="column_reps">Reps</string>
+    <string name="column_weight">Weight</string>
+    <string name="column_time">Time</string>
+    <string name="column_distance">Distance</string>
     <string name="alert_no_log_value_selected">Please select at least one value.</string>
     <string name="checkbox_log_reps">Log Reps</string>
     <string name="checkbox_log_weight">Log Weight</string>
@@ -33,30 +33,30 @@
     <string name="screen_routine_list">Routines</string>
     <string name="screen_exercise_list">Exercises</string>
     <string name="screen_workout_history">History</string>
+    <string name="dialog_title_delete">Do you want to delete %1$s\?</string>
+    <string name="screen_pick_exercise">Pick Exercise</string>
     <string name="screen_settings">Settings</string>
-    <string name="btn_new_exercise">New Exercise</string>
     <string name="screen_insights">Insights</string>
-    <string name="app_license" translatable="false">GymRoutines\nCopyright © 2020  Noah Jutz\n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program.  If not, see https://www.gnu.org/licenses/.</string>
-    <string name="theme_follow_system">Follow System</string>
-    <string name="theme_light">Light</string>
-    <string name="theme_dark">Dark</string>
+    <string name="btn_new_exercise">New Exercise</string>
+    <string name="app_theme_follow_system">Follow System</string>
+    <string name="app_theme_light">Light</string>
+    <string name="app_theme_dark">Dark</string>
     <string name="btn_pop_back">Back</string>
-    <string name="notification_channel_persistent_description">These notifications are shown while you are working out, so you know that your workout is still running.</string>
-    <string name="notification_channel_persistent_name">Ongoing Workout Notification</string>
-    <string name="notification_persistent_title">Workout in progress</string>
-    <string name="notification_persistent_text">Tap to return to your workout</string>
+    <string name="channel_description_current_workout">These notifications are shown while you are working out, so you know that your workout is still running.</string>
+    <string name="channel_name_current_workout">Ongoing Workout Notification</string>
+    <string name="notif_title_current_workout">Workout in progress</string>
+    <string name="notif_text_current_workout">Tap to return to your workout</string>
     <string name="hint_search">Search</string>
     <string name="btn_clear_text">Clear</string>
-    <string name="dialog_discard_title">Discard changes?</string>
-    <string name="dialog_discard_confirm">Discard</string>
+    <string name="dialog_title_discard">Discard changes?</string>
+    <string name="dialog_confirm_discard">Discard</string>
     <string name="screen_edit_exercise">Edit Exercise</string>
     <string name="btn_save">Save</string>
     <string name="label_exercise_name">Exercise name</string>
     <string name="label_exercise_notes">Notes</string>
     <string name="btn_more">More</string>
     <string name="btn_delete">Delete</string>
-    <string name="screen_pick_exercise">Pick Exercise</string>
-    <string name="btn_select_exercises">Select</string>
+    <string name="btn_select_option">Select</string>
     <string name="sheet_workout_in_progress">Workout in progress</string>
     <string name="btn_expand">Expand</string>
     <string name="screen_edit_routine">Edit Routine</string>
@@ -66,24 +66,22 @@
     <string name="btn_add_exercise">Add Exercise</string>
     <string name="btn_new_routine">New Routine</string>
     <string name="screen_about">About</string>
-    <string name="label_app_version">Version</string>
-    <string name="label_app_licenses">Licenses</string>
-    <string name="label_app_source_code">Source Code</string>
-    <string name="label_contact">Contact</string>
+    <string name="about_app_version">Version</string>
+    <string name="about_app_source_code">Source Code</string>
+    <string name="about_contact">Contact</string>
     <string name="screen_licenses">Licenses</string>
     <string name="title_dependencies_list">Open-Source Dependencies</string>
     <string name="btn_open_in_browser">Open in browser</string>
     <string name="screen_appearance_settings">Appearance</string>
     <string name="btn_reset">Reset</string>
-    <string name="item_selected">Selected</string>
     <string name="screen_data_settings">Data</string>
-    <string name="btn_back_up_data">Back up data</string>
-    <string name="btn_restore_data">Restore data</string>
+    <string name="pref_back_up_data">Back up data</string>
+    <string name="pref_restore_data">Restore data</string>
     <string name="alert_must_finish_workout">Please finish your workout first.</string>
-    <string name="btn_restore_data_description">Import a database file, overriding all data</string>
-    <string name="btn_back_up_data_description">Save routines, exercises and workouts in a file</string>
+    <string name="pref_detail_restore_data">Import a database file, overriding all data</string>
+    <string name="pref_detail_back_up_data">Save routines, exercises and workouts in a file</string>
     <string name="screen_general_settings">General</string>
-    <string name="btn_reset_settings">Reset all settings</string>
+    <string name="pref_reset_settings">Reset all settings</string>
     <string name="dialog_title_reset_settings">Reset all settings?</string>
     <string name="dialog_confirm_reset_settings">Reset</string>
 </resources>
